syntax = "proto3";

package yandex.cloud.priv.datatransfer.v1.endpoint;

option go_package = "a.yandex-team.ru/cloud/bitbucket/private-api/yandex/cloud/priv/datatransfer/v1/endpoint;tm_server_endpoint";

enum ChunkSplitter {
    CHUNK_SPLITTER_UNSPECIFIED = 0;
    CHUNK_SPLITTER_NONE = 7;
    CHUNK_SPLITTER_BINARY_EVENT_LOG = 1;
    CHUNK_SPLITTER_BINARY_EVENT_LOG_FRAMED = 2;
    CHUNK_SPLITTER_DO_NOT_SPLIT = 3;
    CHUNK_SPLITTER_LINE_BREAK = 4;
    CHUNK_SPLITTER_MIXED_REQANS_LOG = 5;
    CHUNK_SPLITTER_NEW_REQANS_LOG = 6;
    CHUNK_SPLITTER_PROTOSEQ = 8;
    CHUNK_SPLITTER_PUSH_AGENT_LOG = 9;
    CHUNK_SPLITTER_RTMR_BULK_LOG = 10;
    CHUNK_SPLITTER_OLD_REQANS_LOG = 11;
    CHUNK_SPLITTER_LEVNAL = 12;
    CHUNK_SPLITTER_FRAME_AUTO = 13;
    CHUNK_SPLITTER_ARRAY_OF_JSON = 14;
}
enum LogbrokerConsumer {
    LOGBROKER_CONSUMER_UNSPECIFIED = 0;
    SHARED_ARNOLD_LOGFELLER = 1;
    SHARED_ARNOLD_LOGFELLER_MINUTE = 2;
    SHARED_HAHN_LOGFELLER = 3;
    SHARED_HAHN_LOGFELLER_MINUTE = 4;
    SHARED_HUME_LOGFELLER = 5;
    SHARED_FREUD_LOGFELLER = 6;
    SHARED_BS_ARNOLD_LOGFELLER = 7;
    SHARED_BS_ARNOLD_LOGFELLER_MINUTE = 8;
    SHARED_BS_HAHN_LOGFELLER = 9;
    SHARED_BS_HAHN_LOGFELLER_MINUTE = 10;
    SHARED_BS_HUME_LOGFELLER = 11;
    SHARED_BS_FREUD_LOGFELLER_LBKX = 12;
}
enum CompressionCodec {
    COMPRESSION_CODEC_UNSPECIFIED = 0;
    ZSTD_5 = 1;
    BROTLI_8 = 2;
    BROTLI_3 = 3;
    ZSTD_6 = 4;
    ZLIB_9 = 5;
    LZ_4 = 6;
}
enum ErasureCodec {
    ERASURE_CODEC_UNSPECIFIED = 0;
    NULL = 2;
    LRC_12_2_2 = 1;
}
enum Priority {
    PRIORITY_UNSPECIFIED = 0;
    LOW = 1;
    DEFAULT = 2;
    HIGH = 3;
}
enum YtCluster {
    YT_CLUSTER_UNSPECIFIED = 0;
    HAHN = 1;
    ARNOLD = 2;
    BOHR = 3;
    LANDAU = 4;
    HUME = 5;
    FREUD = 6;
}
enum SensitiveDataScanningPolicy {
    SENSITIVE_DATA_SCANNING_POLICY_UNSPECIFIED = 0;
    COUNT_ONLY = 1;
    XMASK = 2;
    NO_SCAN = 3;
}
enum TimeZoneMode {
    TIME_ZONE_MODE_UNSPECIFIED = 0;
    TIME_ZONE_MODE_LOCAL = 1;
    TIME_ZONE_MODE_PARSE = 2;
    TIME_ZONE_MODE_UTC = 3;
}
enum TransportMetaTimeField {
    TRANSPORT_META_TIME_FIELD_UNSPECIFIED = 0;
    TRANSPORT_META_TIME_FIELD_CREATION_TIME = 1;
    TRANSPORT_META_TIME_FIELD_EXPORT_TIME = 2;
    TRANSPORT_META_TIME_FIELD_LOGBROKER_WRITE_TIME = 3;
}
enum YtType {
    YT_TYPE_UNSPECIFIED = 0;
    YT_TYPE_STRING = 1;
    YT_TYPE_INT64 = 2;
    YT_TYPE_INT32 = 3;
    YT_TYPE_INT16 = 4;
    YT_TYPE_INT8 = 5;
    YT_TYPE_UINT64 = 6;
    YT_TYPE_UINT32 = 7;
    YT_TYPE_UINT16 = 8;
    YT_TYPE_UINT8 = 9;
    YT_TYPE_BOOL = 10;
    YT_TYPE_DOUBLE = 11;
    YT_TYPE_YSON = 12;
    YT_TYPE_DATETIME = 13;
    YT_TYPE_TIMESTAMP = 14;
    YT_TYPE_INTERVAL = 15;
}
message YtProcessingOptions {
    string pool = 1;
    string spec = 2;
}
message ArchiveOptions {
    CompressionCodec compression_codec = 1;
    ErasureCodec erasure_codec = 2;
    bool enabled = 3;
    string delay = 4;
    YtProcessingOptions yt_processing_options = 5;
}
message UltrafastCompactionOptions {
    string lifetime_until_compaction = 1;
    string compacted_tables_time_period = 2;
    string compacted_tables_lifetime = 3;
    ArchiveOptions archive_options = 4;
}
message UltrafastOptions {
    string tables_lifetime = 1;
    UltrafastCompactionOptions compaction = 2;
    Priority priority = 3;
    YtProcessingOptions yt_processing_options = 4;
    int64 max_allocation_size = 5;
}
message BuildOptions {
    repeated string sort_by_columns = 1;
    CompressionCodec compression_codec = 2;
    ErasureCodec erasure_codec = 3;
    YtProcessingOptions yt_processing_options = 4;
}
message RebuildOptions {
    int64 days = 1;
    double completeness_threshold = 2;
    string rebuild_frequency = 3;
    bool rebuild_if_conflicts_detected = 4;
    YtProcessingOptions yt_processing_options = 5;
}
message PeriodDescription {
    BuildOptions build_options = 1;
    RebuildOptions rebuild_options = 2;
    ArchiveOptions archive_options = 3;
    string build_delay = 4;
    string lifetime = 5;
}
message DateTimeFormat {
    string format = 1;
    TimeZoneMode tz_mode = 2;
}
message UnixtimeFormat {
    int64 subsecond_precision = 1;
}
message TimeFormat {
    oneof format {
        UnixtimeFormat unixtime = 1;
        DateTimeFormat date_time = 2;
    }
}
message ParsedRecordTime {
    string time_field = 1;
    string time_zone_field = 2;
    TimeFormat format = 3;
    TimeFormat additional_format = 4;
}
message TransportMetaTime {
    TransportMetaTimeField field = 1;
}
message TimeParsingOptions {
    oneof mode {
        ParsedRecordTime from_parsed_record = 1;
        ParsedRecordTime from_context = 2;
        TransportMetaTime from_transport_meta = 3;
    }
}
message CGIProtectorParams {
    repeated string fields = 1;
    repeated string parameters = 2;
}
message BaseParserOptions {
    TimeParsingOptions time_options = 1;
    bool calc_puid_hash = 2;
    repeated string precomputers = 3;
    CGIProtectorParams cgi_params_to_hide = 4;
}
message Field {
    string name = 1;
    string path = 2;
    YtType type = 3;
    bool required = 4;
    string default_value = 5;
}
message Fields {
    repeated Field field_list = 1;
}
message SchemaConfig {
    oneof config {
        Fields field_list = 1;
        string json_config = 2;
        string schema_id = 3;
    }
}
message JsonParserOptions {
    bool erase_extracted_fields = 1;
    bool add_rest_field = 2;
    bool allow_int64_as_string = 3;
    bool validate_utf8 = 4;
    SchemaConfig schema = 5;
}
message TskvParserOptions {
    bool skip_unknown_fields = 1;
    bool strict_schema = 2;
    SchemaConfig schema = 3;
}
message ParserOptions {
    BaseParserOptions common = 1;
    oneof raw_data_format {
        JsonParserOptions json_parser = 2;
        TskvParserOptions tskv_parser = 3;
    }
}
message ParsingOptions {
    ChunkSplitter chunk_splitter_name = 1;
    oneof parser {
        string parser_name = 2;
        ParserOptions parser_options = 5;
    }
    repeated string yt_resources = 3;
    map<string,string> vault_secrets = 4;
}
message LogfellerSource {
    string topic_path = 1;
    LogbrokerConsumer logbroker_consumer = 2;
    ParsingOptions parsing_options = 3;
    YtProcessingOptions index_yt_processing_options = 4;
    bool use_yql_parser = 5;
}
message LogfellerTarget {
    string log_name = 1;
    YtCluster yt_cluster_name = 2;
    PeriodDescription period1d = 3;
    PeriodDescription period1h = 4;
    PeriodDescription period30min = 5;
    UltrafastOptions ultrafast_options = 6;
    YtProcessingOptions yt_processing_options = 7;
    string yt_account = 8;
    SensitiveDataScanningPolicy sensitive_data_scanning_policy = 9;
    string label = 10;
}
